<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="view"
            type="kr.ac.tukorea.whereareu.presentation.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@string/login_title_text"
            android:textAppearance="@style/TextAppearance.App.30sp.ExtraBold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/describe_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/login_describe_text"
            android:textAppearance="@style/TextAppearance.App.18sp.Bold"
            android:textColor="@color/gray60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_tv" />


        <androidx.cardview.widget.CardView
            android:id="@+id/nok_cardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="56dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/describe_tv">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nok" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/patient_cardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30dp"
            app:cardElevation="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/nok_cardView">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_patient" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nok_text"
            android:textAppearance="@style/TextAppearance.App.20sp.ExtraBold"
            app:layout_constraintEnd_toEndOf="@+id/nok_cardView"
            app:layout_constraintStart_toStartOf="@+id/nok_cardView"
            app:layout_constraintTop_toBottomOf="@id/nok_cardView" />

        <TextView
            android:id="@+id/patient_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/patient_text"
            android:textAppearance="@style/TextAppearance.App.20sp.ExtraBold"
            app:layout_constraintEnd_toEndOf="@id/patient_cardView"
            app:layout_constraintStart_toStartOf="@id/patient_cardView"
            app:layout_constraintTop_toBottomOf="@id/patient_cardView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nok_btn"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rectangle_corner_10"
            android:text="@string/nok_btn_text"
            android:onClick="@{() -> view.onClickNok()}"
            app:layout_constraintBottom_toTopOf="@id/patient_btn"
            app:layout_constraintEnd_toEndOf="@id/patient_cardView"
            app:layout_constraintStart_toStartOf="@id/nok_cardView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/patient_btn"
            style="@style/Widget.App.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rectangle_corner_10"
            android:text="@string/patient_btn_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/patient_cardView"
            app:layout_constraintStart_toStartOf="@id/nok_cardView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>