<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="kr.ac.tukorea.whereareu.presentation.login.NokIdentityFragment" />
        <variable
            name="viewModel"
            type="kr.ac.tukorea.whereareu.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            android:onClick="@{() -> view.onClickBackBtn()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/yellow"
            app:cardCornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_btn">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_nok" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nok_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nok_text"
            android:textAppearance="@style/TextAppearance.App.20sp.ExtraBold"
            app:layout_constraintEnd_toEndOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/input_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/nok_input_name_text"
            android:textAppearance="@style/TextAppearance.App.16sp.SemiBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nok_tv" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_textInputLayout"
            style="@style/Widget.App.TextInputLayout.corner10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/input_name_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="이름"
                android:inputType="text"
                android:textAppearance="@style/TextAppearance.App.16sp.SemiBold"
                android:textColorHint="@color/gray60" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/input_phone_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/nok_input_phone_number_text"
            android:textAppearance="@style/TextAppearance.App.16sp.SemiBold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_textInputLayout"
            style="@style/Widget.App.TextInputLayout.corner10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/input_phone_number_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="전화번호"
                android:inputType="phone"
                android:maxLength="13"
                android:textAppearance="@style/TextAppearance.App.16sp.SemiBold"
                android:textColorHint="@color/gray60" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.App.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rectangle_corner_10"
            android:text="입력 완료"
            android:onClick="@{() -> view.onClickInputDone()}"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>